Fixed spikes not being colored and made the spike patches and stone patches bigger and fixed some texture issues